# routine-scheduler

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LEDGER.md  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
audit/: changelog.jsonl  report.json
config/: config.example.yaml
deploy/: DOCKER.md  SETUP.md  bundle.sh  docker-entrypoint.sh  install.sh  post-commit  routine-scheduler.service  setup-remote-agent-user.sh
docs/: authoring.md  background-tasks.md  conversations.md  curated-traits.md  endpoints.md  examples.md  fragments.md  getting-started.md  notifications.md  oauth-connections.md  playbooks.md  prompt-anatomy.md  remote-machines.md  revise-recipe.md  run-analytics.md  sandboxing.md  schedule-once.md  search.md  subtasks.md  traits-permissions.md  triggers.md
library-seed/fragments/: ask-policy.md  communication.md  fresh-eyes.md  global-utils.md  hygiene.md  improve-bugfix.md  improve-efficiency.md  improve-features.md  improve-research.md  improve-ui.md  improvement.md  ledger-discipline.md  memory.md  self-audit.md  util-authoring-full-auto.md  util-authoring.md  web-research.md
library-seed/permissions/: background-tasks.md  communication.md  memory.md  practice-library.md  remote-machines.md  run-history-full.md  run-history.md  scheduling.md  self-modification.md  shell.md  util-authoring-autonomous.md  util-authoring-full-auto.md  util-authoring.md  workflow-generation.md
library-seed/playbooks/research-and-report/: MAIN.md
library-seed/traits/: change-restraint.md  decision-commitment.md  error-recovery.md  evidence-discipline.md  failure-visibility.md  git-checkpoint.md  improve-efficiency.md  improve-features.md  improve-ui.md  independent-verification.md  interface-copy.md  interface-design.md  review-recall.md  teaching-insights.md  test-design.md
library-seed/workflows/: clarify-instruction.md  clarify-instruction.py  converse.py  general-task.md  general-task.py  library-sync.md  meta-workflows.md  self-audit-code.md
library-seed/workflows/clarify-instruction/: main.md
library-seed/workflows/general-task/: main.md
library-seed/workflows/library-sync/: main.md
library-seed/workflows/meta-workflows/: main.md
library-seed/workflows/self-audit-code/: main.md
routine-seed/clarification/: main.md  routine.yaml
routine-seed/library-sync/: LEDGER.md  instruction.md  main.md  routine.yaml
routine-seed/library-sync/fragments/: ledger-discipline.md
routine-seed/library-sync/steps/: export-instance.md  record-and-report.md  sync-repo.md  sync-sweep.md
routine-seed/meta-workflows/: LEDGER.md  instruction.md  main.md  routine.yaml
routine-seed/routine-improver/: LEDGER.md  instruction.md  main.md  routine.yaml
routine-seed/self-audit/: LEDGER.md  instruction.md  main.md  routine.yaml
routine-seed/token-lab/: LEDGER.md  instruction.md  main.md  routine.yaml
routine-seed/workflow-curator/: .gitignore  LEDGER.md  instruction.md  main.md  routine.yaml
src/rsched/: __init__.py  bootstrap.py  bug_reports.py  clarify.md  cli.py  config.py  conversations.py  docs_build.py  fileactivity.py  fragments_lib.py  frontmatter.py  grants.py  health_events.py  ids.py  landlock.py  libgit.py  library_docs.py  library_sync.py  llm_tasks.py  machines.py  notify.py  paths.py  playbook_distill.py  playbooks.py  recipes.py  registry.py  run_health.py  sandbox.py  schedule.py  schedule_once.py  schema_guard.py  secrets.py  statemap.py  stats.py  traits.py  triggers.py  util_stats.py  utils_lib.py
static/: api.js  app.js  base.css  follow.js  formpersist.js  index.html  md.js  notify.js  router.js  states.js  stream.js  styles.css  sw.js  trace.js  util.js  views.css
static/components/: answerform.js  artifacts.js  budgetfields.js  charts.js  chat.js  code.js  deliberation.js  dialog.js  dirpicker.js  docexpand.js  fileactivity.js  filepicker.js  fsroots.js  heartbeat.js  permissions.js  recipenav.js  referchip.js  reflinks.js  schedule-once.js  schedule.js  searchbox.js  setuppanel.js  stategraph.js  tags.js  taskmanager.js  tasktree.js  toc.js  traitpicker.js  transcript.js  triggers.js  weekgrid.js
static/views/: audit.js  conversations-head.js  conversations-new.js  conversations.js  dashboard.js  help.js  library.js  log.js  new-routine.js  questions.js  routine-config.js  routine-health.js  routine-overview.js  routine-recipe.js  routine.js  run.js  settings-common.js  settings-connections.js  settings-endpoints.js  settings-github.js  settings-library.js  settings-machines.js  settings-notify.js  settings-secrets.js  settings-server.js  settings-source.js  settings.js  stats.js  summary.js  wizard-create.js  wizard.js
tests/: conftest.py  test_actions.py  test_adapt_fragments.py  test_adapt_traits.py  test_api.py  test_api_fs.py  test_api_hooks.py  test_api_llm_tasks.py  test_api_recipe_health.py  test_api_schedule.py  test_api_stats.py  test_api_summary.py  test_autocommit.py  test_bootstrap.py  test_budget.py  test_childrun_roots.py  test_cli.py  test_cli_commands.py  test_commands.py  test_composer.py  test_config.py  test_config_oauth.py  test_connection_injection.py  test_conversations.py  test_decisions.py  test_deliberation.py  test_detach_action.py  test_detached.py  test_docs_build.py  test_endpoint_credits.py  test_endpoints.py  test_engine_llm_tasks.py  test_executor_utils.py  test_failover.py  test_fileactivity.py  test_finish_guard.py  test_grants.py  test_history.py  test_instrument.py  test_landlock.py  (+61 more)
tests/ui/: conftest.py  test_analytics.py  test_connections.py  test_flaky_wiring.py  test_flows.py  test_machines.py  test_routine_page.py  test_schedule_once.py  test_search.py  test_secrets_format.py  test_smoke.py  test_summary.py  test_toc.py  test_triggers.py  test_views_coverage.py
(+224 files in other folders)
